tests/ui/errors/snapshots/lex_invalid_escape.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid escape sequence
   ╭─[test.lis:1:10]
 1 │ let x = '\v'
   ·          ─┬
   ·           ╰── `\v` is not a valid escape
   ╰────
  help: Valid escapes are `\n`, `\t`, `\r`, `\\`, `\'`, `\xHH` (hex), `\ooo` (octal), and `\u{HEX}` (unicode) · code: [lex.invalid_escape_sequence]
