tests/ui/errors/snapshots/lex_invalid_escape_sequence_in_string.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid escape sequence
   ╭─[test.lis:3:17]
 2 │ fn main() {
 3 │   let s = "hello\!world"
   ·                 ─┬
   ·                  ╰── `\!` is not a valid escape
 4 │ }
   ╰────
  help: Valid escapes are `\n`, `\t`, `\r`, `\\`, `\'`, `\xHH` (hex), `\ooo` (octal), and `\u{HEX}` (unicode) · code: [lex.invalid_escape_sequence]
